# bind9-ctl

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: install-linux.sh
src/bind9_ctl/: __init__.py  axfr.py  cli.py  config.py  controller.py  diffing.py  exporter.py  gitops.py  models.py  renderer.py  yaml_loader.py
templates/: zone.j2
